# morphology-learning

./: .gitignore  .gitmodules  CLAUDE.md  README.md  entropy_vector_dhg.ipynb  environment.yaml  hypergraph.py  main.py  multirun.yaml  pyproject.toml  requirements.txt  run_trial.py  train.py  train.sh
algorithms/: algorithms.py  create_env.py  env_wrapper.py  runner.py  types.py  utils.py
algorithms/cem_rl/: run.py
algorithms/dcg/: __init__.py  _vendor.py  logger_shim.py  run.py  types.py
algorithms/dcg_macro/: args_builder.py  trainer.py
algorithms/difference_rewards/: __init__.py  bias_study.py  oracle.py  reward_magnitude_study.py
algorithms/hierarchical/: hrl_env.py  skill_refiner.py  skills.py
algorithms/ippo/: ippo.py  run.py  trainer.py  trainer_parallel.py  types.py
algorithms/manual/: control.py
algorithms/mappo/: dynamic_grouping.py  entropy_helpers.py  hg_cache.py  hypergraph.py  instrinsic_reward.py  intrinsic_reward.py  mappo.py  network.py  run.py  trainer.py  types.py  utils.py  vec_trainer.py
algorithms/mappo_jax/: mappo.py  network.py  run.py  trainer.py  types.py
algorithms/mappo_vanilla/: mappo.py  run.py  types.py  vec_trainer.py
algorithms/tests/: _rollout_utils.py  test_checkpoint_io.py  test_coordination_descriptor.py  test_counterfactual_baseline.py  test_counterfactual_critic.py  test_cross_attention_visualization.py  test_intrinsic_reward_rollout.py  visualize_coordination_graph.py
builders/: builder.yaml  ccea.py  experiment_builder.ipynb  ippo.py  mappo.py  ppo.py
conf/: config.yaml
conf/algorithm/: dcg.yaml  dcg_macro.yaml  mappo.yaml  mappo_jax.yaml  mappo_vanilla.yaml
conf/env/: dcg_smaclite_2s3z.yaml  hrl_skill_agent_9a.yaml  macro_mjx_16a_4o.yaml  macro_mjx_16a_4o_dr.yaml  macro_mjx_16a_4o_stagger.yaml  macro_mjx_16a_4o_stagger_wdr.yaml  macro_mjx_16a_4o_stagger_wdr_aligned.yaml  macro_mjx_16a_4o_wdr.yaml  macro_mjx_20a_5o_wdr.yaml  macro_mjx_9a_3o.yaml  macro_mjx_9a_3o_dr.yaml  macro_multi_box_push_30a.yaml  macro_multi_box_push_9a_single_step.yaml  mjx_16a_4o copy.yaml  mjx_16a_4o.yaml  multi_box_push_30a_6o.yaml  multi_box_push_9a_3o.yaml  multi_box_push_mjx_20a_5o.yaml  multi_box_push_mjx_20a_5o_dr.yaml  multi_box_push_mjx_9a_3o.yaml  multi_box_push_mjx_9a_3o_dr.yaml
conf/model/: dcg.yaml  (+14 more)
environments/: types.py
hypergraphs/: entropy_vector.ipynb  entropy_vector_dhg.ipynb  hg_compat.py  hgnn_conv_layer.py  hypegraph_training.py  hyperedge_structural_entropy.ipynb  hypergraph.py  hypergraph_testing.ipynb
notes_for_LLM/: codebase_summary.md
plans/: async_difference_rewards.md  coordination_graph_novelty.md  grouping_transformer_persistence_plan.md  hygma_integration.md  hygma_integration_feedback.md  hygma_integration_feedback_round2.md  hygma_integration_feedback_round3.md  intrinsic_reward_nn_optimization.md  lidar_sector_measurement_plan.md  mappo_canonical_refactor_plan.md  observation_space_improvement.md  proximity_skill_message_passing.md  vec_trainer_refactor_plan.md
plotting/: config.yaml  plot_training_stats.ipynb
scripts/: clean_notebooks.sh  evaluate.sh  experiment.sh  experiment_set.sh  run_trial_cpu.sh
testing/: ccea_inference.py
tests/: test_smaclite_wrapper.py
(+101 files in other folders)
