[project]
name = "morphology-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill>=0.4.1",
    "gymnasium[box2d]>=1.2.3",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "jax[cuda13]>=0.5.3",
    "matplotlib>=3.10.8",
    "mvlearn>=0.4.1",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "smaclite",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.workspace]
members = [
    "smaclite",
]

[tool.uv.sources]
smaclite = { workspace = true }
