[project]
name = "morphology-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill>=0.4.1",
    "flax>=0.12.7",
    "gymnasium[box2d]>=1.2.3",
    "hydra-core>=1.3",
    "hydra-joblib-launcher>=1.2",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    # cuda12 (not cuda13): CUDA 13 dropped Volta (CC 7.0, e.g. the dgx2 V100s
    # in the HPC nodelist). The cu12 build supports Volta through Hopper, i.e.
    # every GPU this project targets, so one env covers all nodes.
    "jax[cuda12]>=0.5.3",
    "matplotlib>=3.10.8",
    "mujoco-mjx>=3.10.0",
    "mvlearn>=0.4.1",
    "notebook>=7.5.3",
    "optax>=0.2.8",
    "pandas>=2.3.3",
    "pygame-ce>=2.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "smaclite",
    "torch==2.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
# gymnasium[box2d] pulls in regular `pygame`, which conflicts with `pygame-ce`
# (same `pygame` import package). Neutralize that transitive requirement so the
# community edition (pygame-ce) provides the module instead.
override-dependencies = ["pygame ; sys_platform == 'never'"]

[tool.uv.workspace]
members = [
    "smaclite",
]

[tool.uv.sources]
smaclite = { workspace = true }
